	  many default variables, and changes the database format (even xml).
	- Remove OBSOLETE_MINUSASTERISK and RED_MINUSASTERISK
	- Remove cache method cdb
	- Remove --enable-obsolete-symlinks --enable-obsolete-reminder
	- Remove --enable-extra-cache
	- Support TERM_SOFTSTATUSLINE for screen.
	- Do not add -D* flags already contained in CPPFLAGS.

*eix-0.23.10
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-sync: Make layman and hook errors non-fatal, by default.
	  Use -F, FATAL_HOOKS, or the die function to revert old behavior.
	- Suppress status line if TERM does not begin with TERM_STATUSLINE,
	  see the discussion in http://bugs.gentoo.org/show_bug.cgi?id=402993

*eix-0.23.9
*eix-0.23.8
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Provide status line also for eix-update
	- Do not update status line if output is not a terminal
	- Introduce {NO,FORCE_}{COLORS,STATUSLINE,PERCENTAGE}.
	  The previous FORCE_USECOLORS and new NOCOLOR default them all.
	- eix-remote: Change ownership before calling wget, see
	  http://developer.berlios.de/bugs/?func=detailbug&bug_id=18493&
	  group_id=11597
	- Make correct fix for http://bugs.gentoo.org/show_bug.cgi?id=399451.
	  Thank Arfrever Frehtes Taifersar Arahesis <arfrever.fta at gmail.com>

*eix-0.23.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix MetadataCache::use_prefixport(), see:
	  http://bugs.gentoo.org/show_bug.cgi?id=399233
	- Add {tbz2} also for default compact output
	- Fix typo in eix-sync: http://bugs.gentoo.org/show_bug.cgi?id=399117
	- Fix and document behavior if path is specified for cache md5-or-*
	- Remove UTF-8 symbol from my name in some docs to allow building with
	  docutils + python-3.2: http://bugs.gentoo.org/show_bug.cgi?id=399451

*eix-0.23.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Scripts: Support for status line update; minor output improvements
	- Introduce new cache method metadata-md5-or-flat and make it default
	  for PORTDIR_CACHE_METHOD: