@@ -11,6 +11,7 @@
 	- Remove --enable-extra-cache
 	- Support TERM_SOFTSTATUSLINE for screen.
 	- Do not add -D* flags already contained in CPPFLAGS.
+	- scripts: Simplify one-line functions
 
 *eix-0.23.10
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
